fix: optimize the scrollbar height
bugfix: #36037

--- a/src/app/modules/share/components/scrollbar/scrollbar.component.scss
+++ b/src/app/modules/share/components/scrollbar/scrollbar.component.scss
@@ -1,7 +1,7 @@
 :host {
   display: block;
   width: 100%;
-  height: 100vh;
+  max-height: 100vh;
   position: relative;
   overflow: auto;
 
